<resources>
    <string name="app_name">TheBestMovies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Best Movies</string>
    <string name="nav_header_subtitle">thebest.movies@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Cadastro de Filmes</string>
    <string name="menu_gallery">Configurações</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hint_login">Email</string>
    <string name="input_title">Título do Filme</string>
    <string name="input_description">Descrição</string>
    <string name="input_dt_publicacao">Data de lançamento</string>
    <string name="text_forget_password">Esqueci minha senha</string>
    <string name="button_label">Entrar</string>
    <string name="hint_password">Senha</string>
    <string name="text_welcome_sub">Acesse sua conta para cadastrar filmes e séries</string>
    <string name="text_welcome">Seja bem vindo!</string>
    <string name="rd_filme">Filmes</string>
    <string name="rd_series">Series</string>
    <string name="input_dt_duracao">Duração. Ex: 120 min</string>
    <string name="input_poster">Nome do Poster</string>
    <string name="input_url_trailer">Url Trailer</string>
    <string name="button_cadastrar">Cadastrar</string>
    <string name="logout">logout</string>
    <string name="button_play_movie">Play Trailer</string>
    <string name="description">Aquaman é um filme estadunidense de 2018, baseado no personagem homônimo da DC Comics, distribuído pela Warner Bros. Pictures, sendo o sexto filme do Universo Estendido DC.</string>


</resources>
