<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gunmetal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.login.LoginActivity">

    <LinearLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_welcome" />

        <TextView
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_welcome_sub" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textColorHint="@android:color/white"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:id="@+id/edtEmail"
                android:hint="@string/app_name"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textColorHint="@android:color/white"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:id="@+id/edtPassword"
                android:hint="@string/hint_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>


        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_forget_password" />

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clipToPadding="false">

            <com.google.android.material.button.MaterialButton
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:layout_marginTop="20dp"
                android:id="@+id/logar_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_label"/>

            <Space/>
        </GridLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="231dp" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>